--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>TPV Bar</title>
+  <title>TPV Bar Versio 21</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; background: #f4f4f4; }
@@ -525,3 +525,4 @@
   </script>
 </body>
 </html>
+
